--- a/lentille1NB.ipynb
+++ b/lentille1NB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1124,8 +1124,12 @@
     "        posx_obj=self.obj.posx\n",
     "        haut_obj=self.obj.haut\n",
     "        alpha=self.obj.alpha\n",
-    "        line11.set_visible(False)\n",
-    "        line22.set_visible(False)\n",
+    "        line11.set_xdata([0,0])         #RAJ>OUT\n",
+    "        line11.set_ydata([0,0])\n",
+    "        line22.set_xdata([0,0])       \n",
+    "        line22.set_ydata([0,0])\n",
+    "        #ine11.set_visible(False)\n",
+    "        #ine22.set_visible(False)\n",
     "        borne1,borne2=axe.get_xlim()\n",
     "        foc=self.lent.focale\n",
     "        d1=posx_obj-posx_lent\n",
@@ -1199,7 +1203,7 @@
     "            line1.set_ydata([haut_obj,haut_obj,-haut_obj])\n",
     "            line11.set_xdata([posx_lent,posx_lent+4*d1])\n",
     "            line11.set_ydata([haut_obj,5*haut_obj])\n",
-    "            line11.set_visible(True)\n",
+    "            #ine11.set_visible(True)\n",
     "            #line1=plt.Line2D([2*posx_obj,-2*posx_obj],[2*haut_obj,-2*haut_obj])\n",
     "            #line2=plt.Line2D([2*posx_obj,-2*posx_obj],[3*haut_obj,-haut_obj])\n",
     "        elif (d1<0 and d1>-foc):   #image virtuelle\n",
@@ -1218,13 +1222,13 @@
     "            line1.set_ydata([haut_obj,haut_obj,-haut_obj])\n",
     "            line11.set_xdata([posx_lent,posx_img])\n",
     "            line11.set_ydata([haut_obj,haut_img])\n",
-    "            line11.set_visible(True)\n",
+    "            #ine11.set_visible(True)\n",
     "            pente2=haut_obj/d1\n",
     "            line2.set_xdata([posx_obj,posx_lent+4*foc])\n",
     "            line2.set_ydata([haut_obj,pente2*4*foc])\n",
     "            line22.set_xdata([posx_img,posx_obj])\n",
     "            line22.set_ydata([haut_img,haut_obj])\n",
-    "            line22.set_visible(True)\n",
+    "            #ine22.set_visible(True)\n",
     "            #line1=plt.Line2D([posx_obj,posx_lent,posx_img,posx_lent+2*foc],[haut_obj,haut_obj,haut_img,-haut_obj])\n",
     "            #line2=plt.Line2D([posx_img,-posx_img],[haut_img,-haut_img])\n",
     "        \n",
@@ -1244,7 +1248,7 @@
     "            line1.set_ydata([haut_obj,haut_obj,-4*haut_obj])\n",
     "            line11.set_xdata([posx_lent,posx_obj])\n",
     "            line11.set_ydata([haut_obj,haut_obj])\n",
-    "            line11.set_visible(True)\n",
+    "            #ine11.set_visible(True)\n",
     "            pente2=haut_obj/d1\n",
     "            line2.set_xdata([posx_lent-4*foc,posx_lent+5*foc])\n",
     "            line2.set_ydata([-pente2*4*foc,pente2*5*foc])\n",
@@ -1275,8 +1279,12 @@
     "        borne1,borne2=axe.get_xlim()\n",
     "        foc=self.lent.focale\n",
     "        d1=posx_obj-posx_lent\n",
-    "        line11.set_visible(False)\n",
-    "        line22.set_visible(False)\n",
+    "        line11.set_xdata([0,0])         #RAJ>OUT\n",
+    "        line11.set_ydata([0,0])\n",
+    "        line22.set_xdata([0,0])         #RAJ>OUT\n",
+    "        line22.set_ydata([0,0])\n",
+    "        #ine11.set_visible(False)\n",
+    "        #ine22.set_visible(False)\n",
     "        if(alpha ==-10):\n",
     "            posx_img=posx_lent+foc\n",
     "            haut_img=foc*np.tan(np.deg2rad(alpha))\n",
@@ -1295,7 +1303,7 @@
     "            line1.set_ydata([posy_borne1+5,5,3*(5-haut_img)+haut_img])\n",
     "            line11.set_xdata([posx_lent,posx_img])\n",
     "            line11.set_ydata([5,haut_img])\n",
-    "            line11.set_visible(True)\n",
+    "            #ine11.set_visible(True)\n",
     "            line2.set_xdata([borne1,posx_lent-2*foc])\n",
     "            line2.set_ydata([posy_borne1,-2*haut_img])\n",
     "        elif (d1<0):               #objet réel image réel\n",
@@ -1319,7 +1327,7 @@
     "            line1.set_ydata([haut_obj,haut_obj,5*haut_obj])\n",
     "            line11.set_xdata([posx_lent,posx_lent+foc])\n",
     "            line11.set_ydata([haut_obj,0])\n",
-    "            line11.set_visible(True)\n",
+    "            #ine11.set_visible(True)\n",
     "            line2.set_xdata([posx_obj,posx_lent-4*foc])\n",
     "            line2.set_ydata([haut_obj,-pente*4*foc])\n",
     "         \n",
@@ -1358,7 +1366,7 @@
     "            line1.set_ydata([haut_obj,haut_obj, 4*haut_obj])\n",
     "            line11.set_xdata([posx_obj,posx_lent])\n",
     "            line11.set_ydata([haut_obj,haut_obj])\n",
-    "            line11.set_visible(True)\n",
+    "            #ine11.set_visible(True)\n",
     "            line2.set_xdata([posx_lent+4*foc,posx_lent-4*foc])\n",
     "            line2.set_ydata([4*foc*pente2,-4*pente2*foc])\n",
     "            \n",
@@ -1391,7 +1399,7 @@
     "            line1.set_ydata([haut_obj,haut_obj,+5*haut_obj])\n",
     "            line11.set_xdata([posx_lent+4*foc,posx_lent,posx_obj])\n",
     "            line11.set_ydata([-3*haut_obj,haut_obj,haut_obj])\n",
-    "            line11.set_visible(True)\n",
+    "            #ine11.set_visible(True)\n",
     "            pente2=haut_obj/d1\n",
     "            line2.set_xdata([posx_lent+4*foc,posx_lent-5*foc])\n",
     "            line2.set_ydata([4*pente2*foc,-5*pente2*foc])\n",
