--- a/lentille2022.ipynb
+++ b/lentille2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3e133075",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: Qt5Agg\n"
+      "Warning: Cannot change to a different GUI toolkit: notebook. Using qt instead.\n"
      ]
     }
    ],
    "source": [
-    "%matplotlib\n",
+    "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt \n",
     "import numpy as np \n",
     "from matplotlib.widgets import Slider,AxesWidget,CheckButtons,RadioButtons\n",
